# CPP_GraphEngine

./: CMakeLists.txt  README.md  conanfile.txt
src/: main.cc
src/model/: engine.cc  engine.h  model.cc  model.h  structs.h
src/model/components/: map.cc  map.h  render.cc  render.h
src/model/components/subcomponents/: grid.h
src/model/math/: graph.cc  graph.h
src/model/utils/: save.cc  save.h
src/view/: window.cc  window.h
